# ToyCompiler

./: .gitignore  CMakeLists.txt  README.md
doc/: architecture_validation.md  modern_c_compiler_architecture.md  project_structure_guide.md
src/backend/: CMakeLists.txt
src/backend/codegen/: CMakeLists.txt
src/backend/codegen/x86/: CMakeLists.txt
src/backend/registeralloc/: CMakeLists.txt
src/codegen/: CMakeLists.txt
src/codegen/coff/: CMakeLists.txt
src/codegen/elf/: CMakeLists.txt
src/codegen/mach_o/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/config/: CMakeLists.txt
src/common/containers/: CMakeLists.txt  vector.c  vector.h
src/common/diagnostics/: CMakeLists.txt  diagnostic_engine.c  diagnostic_engine.h  source_location.c  source_location.h
src/common/io/: CMakeLists.txt
src/common/logging/: CMakeLists.txt
src/common/utils/: CMakeLists.txt
src/driver/: CMakeLists.txt  main.cpp
src/frontend/: CMakeLists.txt
src/frontend/ast/: CMakeLists.txt  ast.c  ast.h  ast_builder.c  ast_builder.h  ast_dumper.c  ast_dumper.h  ast_nodes.c  ast_nodes.h  ast_utils.c  ast_utils.h  ast_visitor.c  ast_visitor.h
src/frontend/lexer/: CMakeLists.txt  error_handler.c  error_handler.h  lexer.c  lexer.h  token.c  token.h
src/frontend/parser/: CMakeLists.txt
src/frontend/semanticanalyzer/: CMakeLists.txt
src/midend/: CMakeLists.txt
src/midend/ir/: CMakeLists.txt
src/midend/optimizer/: CMakeLists.txt
src/midend/optimizer/passes/: CMakeLists.txt
src/symbol/: CMakeLists.txt
src/type/: CMakeLists.txt
